2003-02-05  Nick Drochak  <ndrochak@gol.com>

	* StringBuilderTest.cs: Test for specific exception using Nunit verson
	2 style Attribute.

2003-01-30  Zoltan Varga  <vargaz@freemail.hu>

	* StringBuilderTest.cs: added test for passing a negative capacity to
	the constructor.

2002-12-21  Nick Drochak <ndrochak@gol.com>

	* all: make tests build and run under nunit2

2002-12-12 Jackson Harper <jackson@latitudegeo.com>

	* AllTests.cs: Comment out UTF8... test (it does not exist)

2002-03-17  Mike Kestner  <mkestner@speakeasy.net>

	* ASCIIEncodingTest.cs : New suite for ASCIIEncoding.
	* AllTests.cs : Add the new suite.

2002-02-10  Nick Drochak  <ndrochak@gol.com>

	* AllTests.cs: Remove StringBuilderTest suite.  There's a major failure
	when it's included and the test errors aren't displayed. 

2002-02-09  Nick Drochak  <ndrochak@gol.com>

	* StringBuilderTest.cs: Fixed tests that were failing against mscorlib. 