@@ -1,3 +1,8 @@
+2003-03-05  Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* ASCIIEncodingTest.cs: added a couple of asserts fot zero-length
+	arrays.
+
 2003-02-05  Nick Drochak  <ndrochak@gol.com>
 
 	* StringBuilderTest.cs: Test for specific exception using Nunit verson
